--- a/client/components/Header.scss
+++ b/client/components/Header.scss
@@ -11,7 +11,7 @@
   top: 0;
   position: fixed;
   width: 100vw;
-  z-index: 1;
+  z-index: 10;
 }
 
 .headerHidden {
