--- a/client/components/Projects.scss
+++ b/client/components/Projects.scss
@@ -208,7 +208,7 @@
   height: 100%;
   padding: 0 2.5%;
   width: 10vw;
-  z-index: 2;
+  z-index: 5;
 }
 
 .leftArrowContainer {
